--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,80 @@
-.App {
+.individualCell {
+  border: 1px solid black;
+  padding: 5px;
+  font-weight: 500;
+  font-size: 9pt;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.subjectTitle {
+  margin-top: 0.5in;
+  text-transform: uppercase;
+  width: 100%;
+  background-color: black;
   color: white;
+  font-weight: 500;
+  font-size: 9pt;
+  padding: 4pt;
+}
+.descriptors {
+  display: flex;
+  flex-direction: row;
+  align-items: space-around;
+  justify-content: space-between;
+  font-size: 9pt;
+  margin-top: 5px;
+}
+.checklistOverall {
+  margin-top: 20px;
+  border-collapse: collapse;
+  width: 100%;
+  table-layout: fixed;
+}
+.checklistCategory {
+  text-transform: uppercase;
+  border: 2px solid black;
+  background-color: rgba(0, 0, 0, 0.15);
+}
+.checklistDescriptors {
+  font-size: 8.5pt;
+  border: 2px solid black;
+  text-align: left;
+  font-weight: 100;
+  padding: 5px;
+}
+.checklistDescriptors.heading {
+  font-weight: 500;
+}
+.individualCell.leftEdge {
+  border-left: 4px solid black;
+}
+.individualCell.rightEdge {
+  border-right: 4px solid black;
+}
+.comment > .header {
+  color: #f54530;
+}
+.comment {
+  margin-top: 20px;
+  page-break-inside: avoid;
+  font-size: 9pt;
+}
+.blurb {
+  padding: 10px;
+  background: rgba(0, 0, 0, 0.15);
+  font-size: 9pt;
+  font-weight: 100;
 }
 
-.App-link {
-  color: #61dafb;
+.studentDetails {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-top: 40px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.explanation {
+  margin-top: 20px;
+  padding: 10px;
+  border: 1px solid black;
+  padding-top: 0px;
 }
