--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@
   align-items: space-around;
   justify-content: space-between;
   font-size: 9pt;
-  margin-top: 5px;
+  margin-top: 20px;
 }
 .checklistOverall {
   margin-top: 20px;
@@ -77,4 +77,13 @@
   padding: 10px;
   border: 1px solid black;
   padding-top: 0px;
+}
+.striped {
+  background: repeating-linear-gradient(
+    -55deg,
+    black,
+    black 1px,
+    white 1px,
+    white 2px
+  );
 }
