--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,7 @@ body {
     }
 
     @top-right {
-      content: "WINTER 2019-2020";
+      content: "2019-2020";
       overflow-x: visible;
       font-size: 9pt;
       font-weight: 400;
