--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@ body {
     min-height: 900px !important;
   }
   .studentContainer:not(:first-of-type) {
-    page-break-before: always;
+    break-before: right;
   }
   .studentContainer:not(:last-of-type) {
     page-break-after: always;
